Ensure that the scrollbar does not appear

--- a/Frontend/src/app/dialogs/edit-task/edit-task-dialog.component.css
+++ b/Frontend/src/app/dialogs/edit-task/edit-task-dialog.component.css
@@ -1,6 +1,6 @@
 .dialogContent {
   width: 25rem;
-  height: 35rem;
+  height: 36rem;
 }
 
 #users {
